--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <spring-boot-dependencies.version>1.5.12.RELEASE</spring-boot-dependencies.version>
         <!--Dependency-->
         <commons-lang3.version>3.7</commons-lang3.version>
+        <!--Tests-->
+        <cglib.version>3.2.6</cglib.version>
+        <objenesis.version>2.5.1</objenesis.version>
+        <byte-buddy.version>1.6.5</byte-buddy.version>
     </properties>
 
     <!--====================================-->
@@ -66,22 +70,23 @@
             <artifactId>groovy-all</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--Required for Spock Mocking-->
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.6.5</version>
+            <version>${byte-buddy.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.5.1</version>
+            <version>${objenesis.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>3.2.6</version>
+            <version>${cglib.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
