--- a/pom.xml
+++ b/pom.xml
@@ -26,27 +26,27 @@
 
     <properties>
         <!--Build-->
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
         <!--Plugins-->
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <gmavenplus-plugin.version>1.6</gmavenplus-plugin.version>
+        <gmavenplus-plugin.version>1.7.1</gmavenplus-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-plugin.version>3.1.0</maven-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <!--Profiles-->
-        <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
-        <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <!--Dependency Management-->
-        <spring-cloud-services-dependencies.version>2.0.1.RELEASE</spring-cloud-services-dependencies.version>
-        <spring-boot-dependencies.version>2.0.3.RELEASE</spring-boot-dependencies.version>
+        <spring-cloud-services-dependencies.version>2.1.4.RELEASE</spring-cloud-services-dependencies.version>
+        <spring-boot-dependencies.version>2.1.6.RELEASE</spring-boot-dependencies.version>
         <!--Dependency-->
-        <commons-lang3.version>3.7</commons-lang3.version>
-        <spring-web.version>5.0.7.RELEASE</spring-web.version>
-        <spring-security-oauth2.version>2.3.3.RELEASE</spring-security-oauth2.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
         <!--Tests-->
-        <spock-core.version>1.0-groovy-2.4</spock-core.version>
-        <cglib.version>3.2.6</cglib.version>
-        <objenesis.version>2.5.1</objenesis.version>
-        <byte-buddy.version>1.6.5</byte-buddy.version>
+        <cglib.version>3.2.12</cglib.version>
+        <groovy-all.version>2.5.7</groovy-all.version>
+        <objenesis.version>3.0.1</objenesis.version>
+        <spock-core.version>1.3-groovy-2.5</spock-core.version>
     </properties>
 
     <!--====================================-->
@@ -69,14 +69,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${spring-web.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2.version}</version>
-            <optional>true</optional>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -99,13 +91,14 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
+            <version>${groovy-all.version}</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         <!--Required for Spock Mocking-->
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>${byte-buddy.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -163,6 +156,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -175,6 +169,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -195,6 +190,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.java</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
