--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.github.piszmog</groupId>
     <artifactId>cloud-config-client</artifactId>
-    <version>2.5-SNAPSHOT</version>
+    <version>2.5</version>
     <packaging>jar</packaging>
 
     <!--====================================-->
@@ -40,8 +40,6 @@
         <!--Dependency Management-->
         <spring-cloud-services-dependencies.version>2.1.4.RELEASE</spring-cloud-services-dependencies.version>
         <spring-boot-dependencies.version>2.1.6.RELEASE</spring-boot-dependencies.version>
-        <!--Dependency-->
-        <commons-lang3.version>3.9</commons-lang3.version>
         <!--Tests-->
         <cglib.version>3.2.12</cglib.version>
         <groovy-all.version>2.5.7</groovy-all.version>
@@ -58,17 +56,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
         </dependency>
         <!-- Spring -->
         <dependency>
             <groupId>io.pivotal.spring.cloud</groupId>
             <artifactId>spring-cloud-services-starter-config-client</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
