--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.github.piszmog</groupId>
     <artifactId>cloud-config-client</artifactId>
-    <version>2.6-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <!--====================================-->
@@ -30,7 +30,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--Plugins-->
-        <gmavenplus-plugin.version>1.7.1</gmavenplus-plugin.version>
+        <gmavenplus-plugin.version>1.8.1</gmavenplus-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-plugin.version>3.1.0</maven-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -38,12 +38,12 @@
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <!--Dependency Management-->
-        <spring-cloud-services-dependencies.version>2.1.4.RELEASE</spring-cloud-services-dependencies.version>
-        <spring-boot-dependencies.version>2.1.6.RELEASE</spring-boot-dependencies.version>
+        <spring-cloud-services-dependencies.version>3.1.0.RELEASE</spring-cloud-services-dependencies.version>
+        <spring-boot-dependencies.version>2.2.2.RELEASE</spring-boot-dependencies.version>
         <!--Tests-->
-        <cglib.version>3.2.12</cglib.version>
-        <groovy-all.version>2.5.7</groovy-all.version>
-        <objenesis.version>3.0.1</objenesis.version>
+        <cglib.version>3.3.0</cglib.version>
+        <groovy-all.version>2.5.8</groovy-all.version>
+        <objenesis.version>3.1</objenesis.version>
         <spock-core.version>1.3-groovy-2.5</spock-core.version>
     </properties>
 
@@ -64,8 +64,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>io.pivotal.spring.cloud</groupId>
+            <artifactId>spring-cloud-services-config-client-autoconfigure</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <!-- Tests -->
         <dependency>
@@ -162,6 +172,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-plugin.version}</version>
+                <configuration>
+                    <source>1.8</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
