--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.github.piszmog</groupId>
     <artifactId>cloud-config-client</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>3.0</version>
     <packaging>jar</packaging>
 
     <!--====================================-->
