--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
         <spring-cloud-services-dependencies.version>3.1.6.RELEASE</spring-cloud-services-dependencies.version>
         <spring-boot-dependencies.version>2.3.5.RELEASE</spring-boot-dependencies.version>
         <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
+        <!-- Sonar -->
+        <sonar.projectKey>Piszmog_cloud-config-client</sonar.projectKey>
+        <sonar.organization>piszmog</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <!--====================================-->
