--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Maven Central Repository
-        uses: actions/setup-java@v1
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: temurin
+          java-version: 8
+          cache: maven
       - name: Release Maven package
         uses: samuelmeuli/action-maven-publish@v1
         with:
