--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -9,12 +9,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 11
+          java-version: 17
           cache: maven
-      - name: Build and analyze
+      - name: Test
         run: mvn -B verify
